mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
/* ... */
.billing-plan-list>div>div:first-child>div>.billing-plan {
	border-width: 1px 0px 0px;
}

.billing-plan.even {
	background-color: rgb(212, 224, 240);
}

.billing-plan .billing-type {
	font-size: 16px;
	padding: 5px;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	color: rgb(25, 115, 154);
	text-transform: uppercase;
	border-bottom: 1px solid rgb(200, 200, 200);
	background-color: white;
}

.billing-price-lbl {
	color: rgb(162, 161, 161);
	line-height: 24px;
	padding: 4px 0px 0px;
}

.billing-price {
	color: rgb(20, 103, 139);
	font-size: 22px;
}

.billing-plan .billing-user,.billing-plan .billing-storage,.billing-plan .billing-project,.billing-plan .billing-bug-feature,.billing-plan .billing-standup-feature,.billing-plan .billing-timetrack-feature
	{
	font-weight: bold;
}

.billing-plan .bluebtn,.billing-plan .graybtn {
	margin-bottom: 15px;
	margin-top: 15px;
}

.updateplan-window {
	text-align: center;
}

.updateplan-window .billing-type {
	color: rgb(25, 115, 154);
	text-transform: uppercase;
	font-size: 11px;
	font-weight: bold;
}

.v-horizontallayout .resourceItem:hover {
	background-color: #ddd;
}

.v-verticallayout .driveEditting {
	background-color: #ddd;
}

/* reponsive wrapper */
.main-content-wrapper>.v-csslayout-margin {
	padding: 0px 25px 12px;
}

.v-label>hr {
	margin: 0px;
}

/* Multiple Select Comp */
.v-csslayout.select-bg {
	background: url("icons/grad-light-top.png") repeat-x 0 1px
		rgb(218, 218, 218);
}

/* Task Group Reorder */
.taskgroup-reorder .v-verticallayout-margin {
	padding-top: 20px;
}

/* Vaadin Notification */
.v-Notification {
	padding: 0px;
}

.v-Notification-system,.v-Notification-error,.v-Notification-warning,.v-Notification-tray
	{
	padding: 1em;
}

.v-Notification h1 {
	display: block;
	width: 100%;
	background: url('icons/grad-light-top.png') repeat-x left top
		rgb(228, 228, 228);
	border-bottom: 1px solid rgb(169, 169, 169);
	font-size: 12px;
	color: rgb(68, 68, 68);
	padding: 3px 10px;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

.v-Notification.v-Notification-error h1,.v-Notification.v-Notification-warning h1,.v-Notification.v-Notification-tray h1
	{
	display: inline;
	background: none;
	border: none;
	font-size: 14px;
	padding: 7px 10px;
	color: white;
}

.v-Notification.v-Notification-warning h1,.v-Notification.v-Notification-warning p
	{
	color: rgb(45, 45, 45);
}

.v-Notification p {
	padding: 5px 3px;
	display: block;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	width: 100%;
}

.v-Notification table {
	margin: 0px 10px 0px 3px;
}

.v-Notification #notificationmsg-icon {
	height: 48px;
	width: 48px;
	background: url('icons/48/info.png') no-repeat left top transparent;
}

.v-Notification #warningmsg-icon {
	height: 48px;
	width: 48px;
	background: url('icons/48/warn.png') no-repeat left top transparent;
}

.v-label.grayLabel {
	color: gray;
}

/* Cancel Account Page */
.cancelAccountHeader .first-line {
	font-size: 20px;
}

.cancelAccountHeader .header-content {
	text-align: center;
}

.cancelAccountHeader .header-note {
	font-size: 11px;
	color: rgb(137, 137, 137);
}

.cancelAccountBody>.v-csslayout-margin {
	border-top: 15px solid rgb(34, 139, 201);
	background-color: rgb(243, 243, 243);
}

.cancelAccountBody .v-gridlayout>div>div>div {
	padding: 8px;
}

.cancelAccountBody .v-gridlayout .v-label {
	text-align: right;
}

.trialInformBox {
	cursor: pointer;
}

.trialEndingNotification {
	background-color: rgb(232, 160, 82);
	color: white;
	padding: 0px 10px;
	display: table-cell;
	vertical-align: middle;
	cursor: pointer;
}

.trialEndingNotification a {
	color: white;
	display: block;
}

.trialEndingNotification .informBlock {
	display: table-cell;
	vertical-align: middle;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
}

.trialEndingNotification .informBlock:first-child {
	padding-right: 5px;
}

/* volume usage info */
.v-horizontallayout.border-box2-no-margin.file-topcontrols {
	border-radius: 5px 5px 0px 0px;
}

.v-horizontallayout.border-box2-no-margin.file-topcontrols .v-buttongroup .v-button.v-button-right
	{
	border-radius: 0px 3px 0px 0px;
}

.v-label.volumeUsageInfo {
	display: table;
}

.v-label.volumeUsageInfo div {
	display: table-cell;
}

.v-label.volumeUsageInfo #left-side {
	width: 30px;
	height: 100%;
	background: url('icons/volume-usage-corners.png') no-repeat top left
		transparent;
}

.v-label.volumeUsageInfo #right-side {
	width: 30px;
	background: url('icons/volume-usage-corners.png') no-repeat top right
		transparent;
}

.v-label.volumeUsageInfo #info-content {
	background-color: rgb(190, 167, 118);
	padding: 3px 0px;
	color: white;
	text-align: center;
}

.v-select-optiongroup .v-select-option {
	white-space: pre-wrap;
	line-height: 1.7em;
}

.v-select-optiongroup {
	spacing: true;
}

